# deepresearcher2

./: .codecov.yaml  .coderabbit.yaml  .cursorignore  .env.example  .gitignore  CLAUDE.md  README.md  prd.md  pyproject.toml
.claude/: README.md  settings.json
.cursor/: README.md  mcp.json  mcp.json.example  settings.json
.cursor/plans/: assays.plan.md  assays_2.plan.md  capture_model_responses.plan.md  dataset_injection.plan.md  evaluator_IMPLEMENTATION.plan.md  evaluator_kwargs.plan.md  evaluator_kwargs_alternative.plan.md  evaluator_kwargs_alternative_pydanticevals.plan.md  modelfactory_class_refactoring_603caec5.plan.md  multi-provider_model_architecture_2a03c392.plan.md  multi-provider_model_factory_b03367b9.plan.md  pyeval_framework_design_3f11c05e.plan.md  rewrite.plan.md  simplified_provider_refactoring_dc2599b7.plan.md
.cursor/rules/: cursor-rules.mdc  general.mdc  python-testing.mdc  python.mdc
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build.yaml  copilot-instructions.md
benchmarks/: README.md
benchmarks/codenames/: task_schema.json
benchmarks/dark_humor_detection/: task.json  task_schema.json
benchmarks/knowledge_gap/: README.md  knowledge_gaps.json  task.json  task_schema.json  topics.json
benchmarks/rephrase/: task_schema.json
data/codenames/: task.json
data/dark_humor_detection/: task.json  task_schema.json
data/rephrase/: task.json
evals/data/bigbench/: README.md
src/deepresearcher2/: README.md  __init__.py  agents.py  cli.py  config.py  env.py  examples.py  graph.py  helloworld.py  hooks.py  logger.py  models.py  plugin.py  prompts.py  utils.py  workflow.py
src/deepresearcher2/evals/: README.md  evals.py  generate.py  import_bigbench.py  runners.py
src/deepresearcher2/mcp/: __init__.py  date_server.py  wolframscript_server.py
tests/: README.md  __init__.py  conftest.py  test_agents.py  test_config.py  test_curiosity.py  test_evals.py  test_example.py  test_graph.py  test_helloworld.py  test_logger.py  test_mcp.py  test_models.py  test_plugin.py  test_pydanticai.py  test_utils.py
tests/assays/test_curiosity/: test_search_queries.json  test_search_queries.readout.json  test_search_queries_1.json  test_search_queries_2.json
tests/cassettes/test_evals/: test_adaptive_uncertainty_strategy.yaml  test_evalgame.yaml  test_evaltournament.yaml  test_evaltournament_usecase.yaml  test_random_sampling_strategy.yaml  test_random_sampling_strategy[0.3].yaml  test_random_sampling_strategy[42.0].yaml  test_random_sampling_strategy[None].yaml  test_round_robin_strategy.yaml
tests/cassettes/test_example/: test_agent_delegation.yaml  test_weather_agent.yaml
tests/cassettes/test_graph/: test_finalizesummary.yaml  test_reflectonsearch.yaml  test_summarizesearchresults.yaml  test_websearch_with_reflection.yaml  test_websearch_without_reflection.yaml
tests/cassettes/test_utils/: test_brave_search.yaml  test_searxng_search.yaml  test_serper_search.yaml
tests/data/: state_1.json  state_2.json  state_3.json
tests/evals/: test_evals.py
tests/evals/cassettes/test_evals/: test_adaptive_uncertainty_strategy.yaml  test_evalgame.yaml  test_evaltournament.yaml  test_evaltournament_usecase.yaml  test_random_sampling_strategy[0.3].yaml  test_random_sampling_strategy[42.0].yaml  test_random_sampling_strategy[None].yaml  test_round_robin_strategy.yaml
tests/mcp/: test_date_server.py  test_wolframscript_server.py
uml/: README.md
